Fixing some masonry layout issues for the filters ui and making that whole experience a little better

--- a/web/app/themes/r2/assets/styles/common/_color-themes.scss
+++ b/web/app/themes/r2/assets/styles/common/_color-themes.scss
@@ -52,6 +52,9 @@
   .filters .filters-container::before {
     background-color: rgba(color($primary),.95);
   }
+  .filter-grid::after {
+    background-color: color($primary);
+  }
 }
 
 // Dark Theme
