--- a/web/app/themes/r2/assets/styles/components/_filters.scss
+++ b/web/app/themes/r2/assets/styles/components/_filters.scss
@@ -8,6 +8,10 @@
     .filters-container {
       opacity: 1;
       display: block;
+
+      > .-inner {
+        opacity: 1;
+      }
     }
   }
 
@@ -20,7 +24,7 @@
   button.filters-toggle {
     @extend .button-reset;
     @include h4;
-    z-index: 3;
+    z-index: 4;
     padding: 0;
     position: relative;
     white-space: nowrap;
@@ -92,7 +96,7 @@
     top: 0;
     left: 0;
     opacity: 0;
-    z-index: 2;
+    z-index: 3;
     width: 100%;
     display: none;
     position: absolute;
@@ -109,16 +113,21 @@
     }
 
     > .-inner {
+      opacity: 0;
       display: flex;
       flex-wrap: wrap;
       max-height: 100vh;
       position: relative;
+      transition: opacity .3s ease-out;
     }
-
 
     @include media-lg {
       padding-left: 180px;
       padding-top: $beat * 4;
+
+      > .-inner {
+        height: auto!important;
+      }
     }
   }
 
@@ -200,7 +209,7 @@
     @extend .button-reset;
     @include p1;
     @include inline-link('red');
-    top: 1;
+    top: 1px;
     padding: 0;
     right: 60px;
     position: absolute;
@@ -236,11 +245,29 @@
   }
 }
 
+// Filter Grid
+.filter-grid {
+  &::after {
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    opacity: 0;
+    z-index: 2;
+    content: '';
+    position: absolute;
+    pointer-events: none;
+    transition: opacity .3s ease-out;
+  }
+}
+
 // Filters Open Styles
 body.filters-open {
-  .page-header {
-    &::after {
-      opacity: .95;
-    }
+  .page-header::after {
+    opacity: .95;
+  }
+  .filter-grid::after {
+    opacity: .5;
+    pointer-events: auto;
   }
 }
